samples/_failures_safe/1761528582_31fbeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ad38d22.c: In function ‘main’:
./samples/SAFE/__tmp_0ad38d22.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
